src/test/deca/context/invalid/resultats/test_invalid_new-cont.res
./src/test/deca/context/invalid/test_invalid_new.deca:16:9: Cannot instantiate anything other than a class 
